--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-macros": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "swiper": "^10.2.0"
   },
   "devDependencies": {
