--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "get-average-color": "^0.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-howler": "^5.2.0",
     "react-router-dom": "^6.15.0",
     "swiper": "^10.2.0",
     "vite-plugin-svgr": "^3.2.0"
